--- a/pages/discern/discern.wxss
+++ b/pages/discern/discern.wxss
@@ -1,1 +1,147 @@
 /* pages/discern/discern.wxss */
+@import "../../assets/style/allstyle.wxss";
+
+.textarea_style {
+  font-size: 32rpx;
+  margin: 30rpx;
+  margin-left: 45rpx;
+  color: #002FA6;
+  width: 100%;
+  /* box-shadow: 0px 0px 5rpx 0px #afafaf; */
+}
+
+textarea {
+  height: 400rpx;
+  width: 90%;
+  font-size: 33rpx;
+  margin-top: 30rpx;
+}
+
+.textarea-bg {
+  background-color: rgba(255, 255, 255, 1);
+  padding: 10rpx;
+  border-radius: 50rpx;
+  font-size: 32rpx;
+}
+ 
+.textarea_placeholder{
+  font-size: large;
+}
+
+/* 诈骗短信识别 */
+.discern_text{
+  font-size: 45rpx;
+  font-weight: 500;
+  /* font-family: 黑体; */
+  padding-top: 20rpx;
+  margin-left: 40rpx;
+}
+
+
+.box{
+  background-color: rgba(233, 233, 233,0.5);
+}
+
+/* 按钮的样式 */
+.button-sp-area{
+  
+}
+
+/* 举报途径 */
+.report_way{
+  color: #000000;
+  margin-top: 30rpx;
+  margin-left: 30rpx;
+  font-size: 37rpx;
+  font-weight: 500;
+}
+
+/* 举报途径的列表信息 */
+.report_way_list{
+  background-color: #ffffff;
+  margin-left: 45rpx;
+  padding-left: 10rpx;
+  margin-top: 20rpx;
+  font-size: 35rpx;
+  margin-right: 45rpx;
+  border-radius: 15rpx;
+}
+/* 国家反诈中心样式 */
+.fraud_center{
+  /* display: flex;
+  align-items: center;
+  width: 100%; */
+  /* justify-items: center; */
+  padding: 20rpx;
+  padding-bottom: 30rpx;
+}
+.fraud_center_text{
+  font-size: 35rpx;
+  width: 100%;
+}
+.fraud_center_brief{
+  font-size: 25rpx;
+  color: rgb(139, 139, 139);
+  width: 100%;
+}
+.fraud_center_img{
+  width: 45rpx;
+  margin-right: 10rpx;
+}
+.fraud_center_img_text{
+  display: flex;
+}
+
+.the12321_img{
+  width: 50rpx;
+  margin-right: 10rpx;
+}
+
+/* 弹窗盒子 */
+.mask{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #000;
+  z-index: 9000;
+  opacity: 0.7;
+ }
+ /* 弹窗 */
+ .modalDlg{
+  width: 480rpx;
+  height: 420rpx;
+  position: fixed;
+  top: 50%;
+  left: 0;
+  z-index: 9999;
+  margin: -370rpx 85rpx;
+  background-color: #fff;
+  border-radius: 36rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+ }
+ /* 弹窗中的图片 */
+ .modalDlg image{
+   width: 200rpx;
+   height: 200rpx;
+ }
+ /* 弹窗里面的按钮 */
+ .modalDlg button{
+   margin-top: 20rpx;
+   margin-bottom: 20rpx;
+   border-radius: 10rpx;
+   font-size: 34rpx;
+   background-color: #002FA6;
+   color: #ffffff;
+ }
+ .percentage_hint{
+   font-size: 35rpx;
+ }
+ .percentage_text{
+   text-align: center;
+   font-size: 44rpx;
+ }
